# yadro_test

./: CMakeLists.txt  readme.md  test1.txt  test2.txt
src/: computer_club.cpp  computer_club.hpp  software.cpp
